# fgp-github

./: Cargo.toml  Dockerfile  manifest.json
logs/: session_start.json  user_prompt_submit.json
src/: main.rs  models.rs  service.rs
src/api/: client.rs  mod.rs
