[package]
name = "fgp-github"
version = "0.2.0"
edition = "2021"
description = "FGP daemon for GitHub operations via GraphQL and REST API"
license = "MIT"
repository = "https://github.com/fast-gateway-protocol/github"
authors = ["Wolfgang Schoenberger"]

# CHANGELOG (recent first, max 5 entries)
# 01/14/2026 - Upgraded to true GraphQL/REST API (Claude)
# 01/12/2026 - Initial implementation with gh CLI wrapper (Claude)

[[bin]]
name = "fgp-github"
path = "src/main.rs"

[dependencies]
# FGP daemon SDK
fgp-daemon = { path = "../daemon" }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1"
dirs = "6.0"
clap = { version = "4", features = ["derive"] }
shellexpand = "3.1"
libc = "0.2"
daemonize = "0.5"
